--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,15 @@ html {
 }
 
 .banner {
-
+  position: relative;
+  max-height: 24em;
+  overflow: hidden;
 }
 
 .banner-content {
-
+  width: 100%;
+  position: absolute;
+  color: #fff;
+  bottom: 0;
+  left: 0;
 }
