--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ html {
   font-family: "PT Sans", sans-serif;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
 .img-flex {
   display: block;
